# ds-workspace-template

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README  pyproject.toml  requirements.txt  ruff.toml
.agents/skills/ds-workspace-template/: SKILL.md
.agents/skills/ds-workspace-template/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json  settings.json
.claude/commands/: dependabot-single-requirements-update.md  deprecate-and-absorb-skills-into-rules.md  feature-development.md  python-dependency-upgrade.md  update-lint-type-check-rules-and-hooks.md
.claude/homunculus/instincts/inherited/: ds-workspace-template-instincts.yaml
.claude/hooks/: block_commands_hook.sh  lint_hook.py  pre_bash_check.sh  ruff_lint.sh  ty_check.sh
.claude/rules/: git-workflow.md  lint-and-format.md  package-management.md  type-checking.md
.claude/skills/pytest/: SKILL.md  examples.md  pytest.md  reference.md
.claude/skills/ruff-lint/: SKILL.md  examples.md  reference.md
.claude/skills/ty-check/: SKILL.md  examples.md  reference.md
.codex/: AGENTS.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: setup_claude.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: dependabot-uv-sync.yml  python-test.yml  unit-test.yml
docs/plans/: 2026-03-03-dependabot-uv-sync-design.md  2026-03-03-dependabot-uv-sync.md
