[project]
name = "ds-container-workspace"
version = "0.1.2"
requires-python = ">=3.13"
license = { file = "LICENSE" }

dependencies = [
    "numpy==2.2.4",
    "pandas==2.2.3",
    "matplotlib==3.10.1",
    "seaborn==0.13.2",
    "ipython==9.2.0",
    "ipykernel==6.29.5",
    "requests==2.32.4",
    "tornado==6.5.1"
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
