[project]
name = "ds-container-workspace"
version = "2025.08.004"
requires-python = ">=3.13"
license = { file = "LICENSE" }

dependencies = [
    "numpy==2.2.4",
    "pandas==2.2.3",
    "matplotlib==3.10.1",
    "seaborn==0.13.2",
    "ipython==9.2.0",
    "ipykernel==6.29.5",
    "httpx==0.28.1",
    "asyncio==3.4.3",
    "aiofiles==24.1.0",
    "tornado==6.5.1",
    "fonttools==4.61.0",
]

[tool.ruff]
namespace-packages = ["src"]

[tool.uv.build-backend]
module-root = ""
module-name = "src"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
