[project]
name = "ds-container-workspace"
version = "2026.03.003"
requires-python = "==3.13.*"
license = { file = "LICENSE" }

dependencies = [
    "numpy==2.2.4",
    "pandas==2.2.3",
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
    "ipython==9.2.0",
    "ipykernel==6.29.5",
    "httpx==0.28.1",
    "asyncio==3.4.3",
    "aiofiles==24.1.0",
    "tornado==6.5.5",
    "fonttools==4.61.0",
    "pillow==12.1.1",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "ty==0.0.23",
    "ruff==0.15.7",
]

[tool.ruff]
namespace-packages = ["src"]

[tool.uv.build-backend]
module-root = ""
module-name = "src"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
